--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,8 +58,11 @@ main {
 --------------------------------------*/
 .comment {
     padding: 35px;
-    border-radius: 5px;
-    box-shadow: 30px 50px 30px rgb(190, 190, 190);
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    box-shadow: 30px 50px 30px rgba(0, 0, 0, 0.15);
     .avatar-name {
         display: grid;
         grid-template-columns: 60px 1fr;
@@ -147,9 +150,24 @@ main {
     }
     #daniel {
         grid-column: span 2;
+        .bg-decor {
+            position: absolute;
+            z-index: 0;
+            top: 0px;
+            right: 60px;
+            img {
+                width: 120px;
+                height: 120px;
+            }    
+        }
+        h3, p {
+            position: relative;
+            z-index: 1;
+        }
     }
     #kira {
         grid-row: span 2;
+
     }
     #patrick {
         grid-column: span 2;
